<resources>
    <string name="app_name">GroupApp</string>
    <string name="title_home">Search Events</string>
    <string name="title_dashboard">Calender</string>
    <string name="title_notifications">Profile</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In Instead?</string>
    <string name="log_in">Log In Instead?</string>
    <string name="prompt_repeat_password">Repeat Password</string>
</resources>